unpackaged/main/default/objects/Centro__Nudge__c/Centro__Nudge__c.object-meta.xml
<CustomObject>
    <label>Nudge</label>
    <nameField>
        <label>Nudge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nudges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>