unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Conditions__c.field-meta.xml
<CustomField>
    <fullName>Centro__Conditions__c</fullName>
    <label>Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>