unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Centro__Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>