unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Dashboard_Name__c.field-meta.xml
<CustomField>
    <fullName>Centro__Dashboard_Name__c</fullName>
    <label>Dashboard Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>