unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Centro__Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <type>Time</type>
</CustomField>