unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Centro__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>