unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Show_Record_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Centro__Show_Record_Blocks__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Record Blocks</label>
    <type>Checkbox</type>
</CustomField>