unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Centro__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>