unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Style__c.field-meta.xml
<CustomField>
    <fullName>Centro__Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Details</fullName>
                <default>true</default>
                <label>Record Details</label>
            </value>
            <value>
                <fullName>List View</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>