unpackaged/main/default/objects/Centro__Nudge__c/fields/Centro__Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Centro__Trigger_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Changed</fullName>
                <default>true</default>
                <label>Record Changed</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>