unpackaged/main/default/objects/Centro__Nudge__c/listViews/Centro__All.listView-meta.xml
<ListView>
    <fullName>Centro__All</fullName>
    <columns>NAME</columns>
    <columns>Centro__Object_Label__c</columns>
    <columns>Centro__Conversation_Name__c</columns>
    <columns>Centro__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Nudges</label>
</ListView>