unpackaged/main/default/objects/Centro__Nudge__c/listViews/Centro__Mine.listView-meta.xml
<ListView>
    <fullName>Centro__Mine</fullName>
    <columns>NAME</columns>
    <columns>Centro__Object_Label__c</columns>
    <columns>Centro__Conversation_Name__c</columns>
    <columns>Centro__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Nudges</label>
</ListView>